--- a/sobre/index.html
+++ b/sobre/index.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="/assets/main.css">
   <link rel="stylesheet" href="/assets/share.css">
-  <link rel="canonical" href="/sobre/">
+  <link rel="canonical" href="https://adamatti.github.io/blog/sobre/">
   <link rel="alternate" type="application/rss+xml" title="Adamatti - blog pessoal" href="/feed.xml">
   
   
@@ -122,7 +122,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>Espaço para compartilhar conhecimento, minhas opiniões, notícias que eu considero relevante. 
+        <p>Espaço para compartilhar conhecimento, minhas opiniões, notícias que eu considero relevante.
 </p>
       </div>
     </div>
