--- a/sobre/index.html
+++ b/sobre/index.html
@@ -11,6 +11,7 @@
 
   <link rel="stylesheet" href="/blog/assets/main.css">
   <link rel="stylesheet" href="/blog/assets/share.css">
+  <link rel="stylesheet" href="/blog/asciidoc-pygments.css">
   <link rel="canonical" href="https://adamatti.github.io/blog/blog/sobre/">
   <link rel="alternate" type="application/rss+xml" title="Adamatti - blog pessoal" href="/blog/feed.xml">
   
